Melodie/wwwroot/css/site.css
/* ... */
.btn.growing-circle:hover .btn-effect-box {
    top: -70px;
    left: -70px;
    width: 200%;
    height: 500%;
    opacity: 1;
}
.btn.long.growing-circle:hover .btn-effect-box { left: -150px; }

/* Showing icon */
.btn.showing-icon { position: relative; }
.btn.showing-icon span {
    position: relative;
    left: 0;
    transition: all 350ms ease-out;
}

.btn.showing-icon .btn-effect-box {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    bottom: 0;
    left: -200px;
    width: 100%;
    height: 100%;
    padding: 0;
    background: #BFC0C0;
    transition: all 350ms ease-out;
}
.btn.long.showing-icon .btn-effect-box { left: -350px; }

.btn.showing-icon .btn-effect-box object,
.btn.showing-icon .btn-effect-box img {
    display: inline-block;
    width: 20px;
    height: auto;
    background: none;
    border: none;
    pointer-events: none;
}

.btn.showing-icon:hover .btn-effect-box { left: 0; }
.btn.showing-icon:hover span { left: 150px; }
.btn.long.showing-icon:hover span { left: 300px; }

/* Global - Playlists
-------------------------------------------------- */

.playlist-logo {
    position: relative;
    display: block;
    width: 100%;
    height: 0;
    margin: 0 auto;
    vertical-align: middle;
    padding-bottom: 100%;
}

.playlist-logo:after {
    content: attr(data-acronym) '';
    position: absolute;
    top: 50%;
    right: 0;
    left: 0;
    transform: translateY(-50%);
    font-size: 2em;
    text-align: center;
}

.playlist-logo.add-icon:after {
    content: '';
    position: absolute;
    top: 50%;
    right: 0;
    left: 0;
    transform: translateY(-50%);
    height: 100%;
    background: url("../images/playlist_add-24px.svg") no-repeat center;
    background-size: 45%;
    text-align: center;
}

.playlist-title {
    display: inline-block;
    width: 100%;
    font-size: 0.9em;
    font-weight: bold;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.playlist-desc {
    display: inline-block;
    width: 100%;
    line-height: 1.2em;
    font-size: 0.9em;
    margin: 0;
    overflow: hidden;
    text-overflow: ellipsis;
}

/* Global - Music player
-------------------------------------------------- */   

body.has-music-player footer {
    z-index: 5000;
}

#music-player {
    display: block;
    width: 100%;
    height: 145px;
}

/** Waveform **/
#music-player-waveform {
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
    width: 100%;
    height: 64px;
    margin: 10px 0 0 0;
}

/** Controls **/
#music-player-controls {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 81px;
}

#music-player-controls .section {
    width: 33%;
    height: 100%;
}

/* Buttons */
#music-player-buttons {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    z-index: 510;
}

.music-player-btn {
    width: 30px;
    height: 30px;
    margin: 0 5px;
    border: thin transparent solid;
    border-radius: 50%;
    cursor: pointer;
    transition: all 350ms;
}

.music-player-btn object {
    width: 100%;
    pointer-events: none;
}

.music-player-btn.smaller   { width: 15px; height: 15px }
.music-player-btn.bigger    { width: 45px; height: 45px }

.music-player-btn #play-icon    { display: block; }
.music-player-btn #pause-icon   { display: none; }

/* Sliders */
.music-player-sliders-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0 25px;
}

.music-player-sliders-wrapper.align-left    { align-items: flex-start; }
.music-player-sliders-wrapper.align-right   { align-items: flex-end; }

.slider-icon                { margin-right: 7px; }
.slider-icon.clickable-icon { cursor: pointer; }
.slider-icon object         { pointer-events: none; }

.slider-icon #volume-icon   { display: block; }
.slider-icon #mute-icon     { display: none; }

.music-player-slider {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 16px;
}
.music-player-slider:not(:last-child) { margin-bottom: 5px; }

.music-player-slider object { height: 100%; }

/* Global - Footer
-------------------------------------------------- */

body.has-music-player {
    height: 100%;
}

body.has-music-player footer {
    position: -webkit-sticky;
    position: sticky;
    right: 0;
    bottom: -230px;
    top: 0;
    left: 0;
}

#footer-links {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 200px;
}

.footer-links-section {
    width: 33%;
    height: 70%;
    padding: 0 30px;
}

.footer-links-section h3 {
    font-size: 1em;
    margin: 0 0 10px 0;
}

.footer-links-section ul {
    list-style: none;
    font-size: 0.8em;
    margin: 0;
    padding: 0
}

.footer-links-section li:not(:last-child)   { margin-bottom: 10px; }
.footer-links-section a                     { text-decoration: none; }

#footer-copyright {
    text-align: center;
    height: 30px;
    line-height: 30px;
    font-size: 0.7em;
}
#footer-copyright p { margin: 0; }

/* Global - Others
-------------------------------------------------- */

.no-select {
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Old versions of Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}
/* ... */

